# awslogin

./: .gitignore  .repo-meta.yml  INSTALLATION_OPTIONS.md  README.md  README.rst  adfs_auth.py  assume_role.py  awslogin.spec  binary_build_bundle.sh  buildspec.yml  deploy.py  duo.py  duo_authenticator.py  handel-codepipeline.yml  index.py  pypi_auth.py  pyproject.toml  requirements.txt  roles.py  run.py  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: pythonapp.yml  pythonpublish.yml
Pyinstaller/: Building_Binaries.md
Pyinstaller/linux/: Dockerfile  entrypoint.sh
awslogin/: adfs_auth.py  assume_role.py  roles.py
byu_awslogin/: __version__.py  adfs_auth.py  assume_role.py  data_cache.py  index.py  login.py  roles.py
byu_awslogin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
byu_awslogin/auth/: adfs_auth.py  assume_role.py  saml.py
byu_awslogin/util/: consoleeffects.py  data_cache.py
test/byu_awslogin/: test_adfs_auth.py  test_assume_role.py  test_data_cache.py  test_index.py  test_login.py
test/byu_awslogin/adfs_html_mocks/: duo-trans-init.json  duo_screen.html  duo_trans_verify.json  login_screen.html
test/byu_awslogin/auth/: test_adfs_auth.py  test_assume_role.py
test/byu_awslogin/auth/adfs_html_mocks/: auth_success.html  duo_auth_result.json  duo_init.html  duo_verify_result.json
test/byu_awslogin/util/: test_data_cache.py
